fix margin on mobile home page

--- a/src/Components/HomePage/HomePage.module.css
+++ b/src/Components/HomePage/HomePage.module.css
@@ -90,7 +90,8 @@
     flex-direction: column;
     justify-content: center;
     width: 80vw;
-    margin-top: 100px;
+    margin-top: 150px;
+    margin-bottom: 50px;
   }
 
   .info-container {
